2007-04-14  Elijah Newren  <newren gmail com>

	* modulesets/gnome-2.18.modules:
	* modulesets/gnome-external-deps-2.20.modules:
	* modulesets/gnome-suites-2.20.modules:
	Use better download locations for opal and pwlib and update these
	two plus ekiga

2007-04-14  Elijah Newren  <newren gmail com>

	* jhbuild/moduleset.py: Don't import a non-existent module
	(it's likely that files were missed in the commit from #308352 &
	#349114).

2007-04-14  Elijah Newren  <newren gmail com>

	* modulesets/gnutls.modules:
	* modulesets/gnome-external-deps-2.20.modules:
	Use the official download site for gnutls related tarballs (see
	http://mail.gnome.org/archives/release-team/2007-April/msg00027.html)

2007-04-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/defaults.jhbuildrc: added missing default for xvfbargs.

2007-04-14  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.20.modules: added goocanvas to glom depends.
	(closes: #428972, patch by Craig Keogh)

2007-04-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py, jhbuild/frontends/autobuild.py,
	jhbuild/frontends/terminal.py, jhbuild/frontends/tinderbox.py,
	jhbuild/moduleset.py, jhbuild/main.py, jhbuild/config.py,
	jhbuild/defaults.jhbuildrc, modulesets/gnome-2.14.modules,
	modulesets/gnome-2.14-test.modules: integrate LDTP and Dogtail
	tests, most of the work done by Prashanth Mohan during Google
	SoC 2006.  (Closes: #308352 and #349114)

2007-04-14  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* modulesets/gnome-2.18.modules,
	* modulesets/gnome-2.16.modules: PyGObject branched for 2.12.x.

2007-04-10  Elijah Newren  <newren gmail com>

	* jhbuild/modtypes/tarball.py: Fix a case missed in bug 417341;
	remove '-- ' from autogenargs for tarball modules (workaround
	gstreamer weirdness)

2007-04-09  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: Use 2.18 branch for vino.
	
2007-04-09  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: Use 2.18 branch for