@@ -1,3 +1,9 @@
+2007-04-15  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/frontends/buildscript.py: use os.makedirs() to create
+	checkout root and install prefix when those do not exist.
+	(closes: #429835)
+
 2007-04-14  Elijah Newren  <newren gmail com>
 
 	* modulesets/gnome-2.18.modules:
